--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Victor Boutté, Tulio Troncoso, Darin Dora",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.4"
   }
 }
