--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.2",
     "cheerio-tableparser": "^1.0.1",
+    "cors": "^2.8.4",
     "express": "^4.16.4",
-    "xml2js": "^0.4.19",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "nodemon": "^1.18.5"
